# python_math_repo

./: pyproject.toml
Master_Math_By_Coding_In_Python/Arithmetic/: MXC_pymath_arithmetic.ipynb  MXC_pymath_arithmetic_bughunt.ipynb
